[package]
name = "jsonice"
version = "0.1.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2018"
description = "Streaming JSON pretty printer"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/jsonice"
repository = "https://github.com/stephaneyfx/jsonice.git"
readme = "README.md"
keywords = ["json", "pretty", "prettify", "streaming", "stream"]

[dependencies]
serde_json = "1.0.57"
serde-transcode = "1.1.0"
structopt = "0.3.18"
thiserror = "1.0.20"
