[package]
name = "jsonice"
version = "0.1.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2021"
description = "Streaming JSON pretty printer"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/jsonice"
repository = "https://github.com/stephaneyfx/jsonice.git"
keywords = ["json", "pretty", "prettify", "streaming", "stream"]

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
serde_json = "1.0.78"
serde-transcode = "1.1.1"
structopt = "0.3.18"
thiserror = "1.0.30"
